Solve "The Case of the Missing Checkbox".
MW's internal mw-ui-checkbox style was running into conflict
possibly with bootstrap's checkboxes with the net result being an
invisible checkbox in the login page. For now just override the
{opacity: 0} setting for input[type="checkbox"] with
{opacity:1 !important} in style.css.

FIXME: Actually theme the checkbox with checkbox css hackery:
https://stackoverflow.com/questions/4148499/how-to-style-a-checkbox-using-css

--- a/style.css
+++ b/style.css
@@ -784,3 +784,10 @@ table.list th {
   background-color: #f9f9f9;
 }
 
+input[type="checkbox"]
+{
+  opacity: 1   !important;
+  width:   1em !important;
+  height:  1em !important;	
+  margin: 0 0.5em 0 -18px !important;
+}
